--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/src/assets/img/favicon-32x32.png" type="image/x-icon">
     <title>Iglesia  Rios de Avivamiento para las Naciones | WebSite </title>
   </head>
   <body>
