añadiendo nuevas secciones

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/src/assets/img/favicon-32x32.png" type="image/x-icon">
-    <title>Iglesia  Rios de Avivamiento para las Naciones | WebSite </title>
+    <title>I.R.A.N | WebSite </title>
   </head>
   <body>
     <div id="root"></div>
